@ feat: 多源图片搜索、文件化Skill、公共API工具、全栈Express部署、Agent审查
## 新增功能

### 多源图片搜索
- 新增 Openverse 图片源（7亿+图片，无需API Key）
- Pexels + Openverse 并行搜索，CompletableFuture 5s超时降级
- ImageSource 接口 + ParallelImageSearcher 编排器
- 新增 ImageSource/PexelsImageSource/OpenverseImageSource/ParallelImageSearcher

### 文件化 Skill
- Skill 定义统一为 skills/<name>/SKILL.md 格式（YAML frontmatter + Markdown body）
- SkillFileLoader 启动时扫描解析，SkillSyncService 同步到数据库
- CodeSkill 新增 contentHash/source/customTools/hooks 字段
- CodeSkillService 加 Caffeine 缓存

### 公共 API 工具（7个）
- DictionaryLookupTool - Free Dictionary 英文词典
- QrCodeGeneratorTool - goqr.me 二维码生成
- ColorGeneratorTool - xColors 配色方案
- MockApiTool - JSONPlaceholder 模拟数据
- NoiseBackgroundTool - php-noise 噪点背景
- FaviconFetcherTool - iconhorse.dev 网站图标
- PageCounterTool - CountAPI 访问计数
- PublicApiTool 基类（HTTP/缓存/超时）

### 全栈 Express 部署
- NodeProcessManager 管理 Express 进程（启动/停止/端口复用）
- FullstackProjectBuilder 构建后自动启动 Express
- deployApp() 全栈项目返回 Express URL
- 前端预览/部署按钮自动识别全栈项目并打开 Express 地址

### Agent 审查接入
- processTokenStream() 接入 ReviewAgent 审查
- 审查结果通过 SSE review_result 消息推送给前端
- 前端解析并显示审查结果（通过/未通过/评分）

### Skill 自定义工具
- CustomToolProvider 支持 JSON 定义 HTTP 工具
- 管理后台 Skill 编辑表单支持 customTools 和 hooks 编辑

### Skill 市场页面
- 新增 /skills 路由，卡片式浏览技能
- 按类型筛选（前端/全栈/其他）

## 数据库变更

- ALTER TABLE code_skill ADD COLUMN content_hash VARCHAR(64)
- ALTER TABLE code_skill ADD COLUMN source VARCHAR(20) DEFAULT file
- ALTER TABLE code_skill ADD COLUMN custom_tools JSON
- ALTER TABLE code_skill ADD COLUMN hooks JSON

## 修复

- 全栈项目部署后前端打开正确的 Express URL
- NodeProcessManager 端口复用（stopServer 不清端口映射）
- Axios 拦截器响应结构适配（res.data 而非 res.data.data）
@